Move netconf.util.xml to netconf-client
This package is only used internally by netconf-client, move it to its
sole user and clean up HardcodedNamespaceResolver to use Map.of().

JIRA: NETCONF-1002
Change-Id: I219c849362fb4b02297fd8fa243a0ee171f00f14
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>